# identity-service-samples

./: .gitignore  CONTRIBUTING.md  README.md  docker-compose.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: dependency.yml  lint.yml
agent/a2a/currency_exchange/: .env.sample  Dockerfile  agent.py  agent_executor.py  main.py  pyproject.toml  test_client.py
agent/oasf/financial_assistant/: .env.sample  Dockerfile  agent.py  agent_executor.py  currency_exchange_agent.py  main.py  oasf.json  pyproject.toml  test_client.py
agent/oasf/financial_assistant/ui/: financial-assistant-chat.html  index.html  nginx.conf
img/: samples-drawio.xml
mcp/currency_exchange/: .env.sample  Dockerfile  main.py  pyproject.toml
